# prismatic

./: main.py  pyproject.toml
assets/sprites/: animals.json  items.json  monsters.json  rogues.json  tiles.json
src/prismatic/: colors.py  config.py  input.py  player.py  render.py  utils.py
src/prismatic/data/: biomes.json  colors.json  config.json  input.json  messages.json  prefab_rooms.json  tile_types.json  tiles.json
src/prismatic/map/: collision.py  map_loader.py  map_renderer.py  tile.py  tile_interaction_handler.py
src/prismatic/ui/: message_box.py
tests/: test_map_loader.py  test_player.py  test_tile_interaction_handler.py
