[project]
name = "prismatic"
version = "0.1.0"
description = ""
authors = [
    {name = "rlt-lab", email = "ryantaito@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame",
    "pygame-gui",
    "esper",
    "pytweening",
    "pydantic",
    "noise",
    "jsonpickle",
    "tcod",
    "pathfinding",
    "numpy"
]

[tool.poetry]
packages = [{include = "prismatic", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
